--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/server.js",
     "preserve": "npm run build",
     "serve": "concurrently \"npx tsc -w\" \"nodemon dist/server.js\"",
-    "dev": "nodemon server.js"
+    "serve-node": "concurrently \"npx tsc -w\" \"node dist/server.js\""
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,7 @@
     "@types/express-flash": "^0.0.5",
     "@types/express-session": "^1.17.10",
     "@types/passport": "^1.0.16",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
